# xfce4-lock-keys-plugin

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  THANKS  configure.ac.in
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  lock-keys.c  lock-keys.desktop.in.in
pixmaps/: Makefile.am  makepng.sh
po/: POTFILES.in
