pixmapdir = $(datadir)/xfce4/xfce4-lock-keys-plugin

pixmap_DATA = key-caps-off.png	\
	key-caps-on.png		\
	key-num-off.png		\
	key-num-on.png		\
	key-scroll-off.png	\
	key-scroll-on.png

EXTRA_DIST = $(pixmap_DATA)	\
	key-any.svg		\
	key-caps-off.svg	\
	key-caps-on.svg		\
	key-num-off.svg		\
	key-num-on.svg		\
	key-scroll-off.svg	\
	key-scroll-on.svg	\
	makepng.sh
